[package]
name = "speech-engine"
version = "0.1.0"
authors = ["Charlie Wilkin <cwilkin@protonmail.com>", "Vennila Pugazhenthi <vennilapugazhenthi@gmail.com>"]
edition = "2018"
description = "An open-source speech recognition engine (WIP)"
readme = "README.md"
repository = "https://github.com/VennilaPugazhenthi/SpeechEngine"
license = "MIT"

[dependencies]
